--- a/palmeiras.html
+++ b/palmeiras.html
@@ -8,6 +8,10 @@
         *{
             font-family: Arial, Helvetica, sans-serif;
         }
+        .imgmenu{
+            width: 20%;
+            height: 20%;
+        }
       .simbolo {
         display: flex;
         justify-content: center;
