--- a/basquete.html
+++ b/basquete.html
@@ -45,7 +45,6 @@
 
         .dropbtn {
             background-color: #0a8d61;
-            ;
             color: white;
             padding: 10px 25px;
             font-size: 16px;
@@ -143,11 +142,14 @@
         .especificacao {
             background-color: orangered;
             color: white;
-            /*  padding: 5px;*/
             display: flex;
             justify-content: center;
             font-family: initial;
             margin-top: 0%;
+        }
+        .imgmenu{
+            width: 20%;
+            height: 20%;
         }
     </style>
 
