--- a/futebol.html
+++ b/futebol.html
@@ -7,24 +7,7 @@
     <title>Futebol</title>
     <link rel="stylesheet" href="style.css" />
     <style>
-        /*
-        html :-webkit-scrollbar {
-            width: 10px;
-        }
-
-        html :-webkit-scrollbar-thumb {
-            border-radius: 50px;
-            background: #6e6ea9;
-        }
-
-        html :-webkit-scrollbar-track {
-            background: #ededed;
-        }
-
-        .body {
-            text-decoration: none;
-        }
-UMA TENTATIVA DE ESTILIZAR A BARRA DE ROLAGEM*/
+        
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
         .title {
@@ -44,7 +27,6 @@ UMA TENTATIVA DE ESTILIZAR A BARRA DE ROLAGEM*/
             list-style: none;
             padding: 15px 0;
             margin: 0;
-            /*  background-color: rgb(35, 20, 88); */
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
             margin-bottom: 30px;
@@ -55,7 +37,7 @@ UMA TENTATIVA DE ESTILIZAR A BARRA DE ROLAGEM*/
         }
 
         .dropbtn {
-            background-color: #0a8d61;
+            background-color: red;
             ;
             color: white;
             padding: 10px 25px;
@@ -68,7 +50,7 @@ UMA TENTATIVA DE ESTILIZAR A BARRA DE ROLAGEM*/
         }
 
         .dropbtn:hover {
-            background-color: #155bb5;
+            background-color: #9c1313;
             transform: translateY(-3px);
         }
 
@@ -86,7 +68,7 @@ UMA TENTATIVA DE ESTILIZAR A BARRA DE ROLAGEM*/
             z-index: 1;
             border-radius: 8px;
             overflow: hidden;
-            top: 50px;
+            top: 10px;
         }
 
         .dropdown-content a {
@@ -160,12 +142,16 @@ UMA TENTATIVA DE ESTILIZAR A BARRA DE ROLAGEM*/
         }
 
         .especificacao {
-            background-color: mediumseagreen;
+            background-color: rgb(169, 38, 38);
             color: white;
             /*padding: 5px;*/
             display: flex;
             justify-content: center;
             font-family: initial;
+        }
+        .imgmenu{
+            width: 20%;
+            height: 20%;
         }
     </style>
 </head>
