--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
+        .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+    }
         a {
             text-decoration: none;
             color: black;
@@ -51,7 +59,7 @@
         }
 
         .dropbtn {
-            background-color: #0a8d61;
+            background-color: red;
             color: white;
             padding: 10px 25px;
             font-size: 16px;
@@ -63,7 +71,7 @@
         }
 
         .dropbtn:hover {
-            background-color: #155bb5;
+            background-color: #b51515;
             transform: translateY(-3px);
         }
 
@@ -81,7 +89,7 @@
             z-index: 1;
             border-radius: 8px;
             overflow: hidden;
-            top: 50px;
+            top: 40px;
         }
 
         .dropdown-content a {
@@ -114,6 +122,8 @@
             box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            height: 490px;
+            margin-bottom: 2%;
         }
 
         .card:hover {
@@ -157,6 +167,44 @@
                 transform: translateY(0);
             }
         }
+        .imgmenu{
+            width: 20%;
+            height: 20%;
+        }
+
+        table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 20px;
+      }
+  
+      th, td {
+        padding: 10px;
+        text-align: center;
+        border: 1px solid #ddd;
+      }
+  
+      th {
+        background-color: #df1919;
+        color: #fff;
+      }
+  
+      tr:nth-child(even) {
+        background-color: #f9f9f9;
+      }
+  
+      tr:hover {
+        background-color: #f1f1f1;
+      }
+  
+      caption {
+        font-size: 1.5em;
+        margin-bottom: 10px;
+      }
+    .titulotable{
+        text-align: center;
+    }
+  
     </style>
 </head>
 
@@ -239,8 +287,83 @@
         </a>
     </div>
 
-    <div class="tabela">
-        <img src="./imagens/tabela-brasileirao.webp" alt="Tabela do Brasileirão">
+    
+  <body>
+    <div class="container">
+      <h1 class="titulotable">Tabela do Campeonato Brasileiro 2024</h1>
+      <table>
+        <thead>
+          <tr>
+            <th>Posição</th>
+            <th>Time</th>
+            <th>Jogos</th>
+            <th>Vitórias</th>
+            <th>Empates</th>
+            <th>Derrotas</th>
+            <th>GF</th>
+            <th>GC</th>
+            <th>SG</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Flamengo</td>
+            <td>10</td>
+            <td>8</td>
+            <td>1</td>
+            <td>1</td>
+            <td>25</td>
+            <td>10</td>
+            <td>15</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Palmeiras</td>
+            <td>10</td>
+            <td>7</td>
+            <td>2</td>
+            <td>1</td>
+            <td>22</td>
+            <td>9</td>
+            <td>13</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>São Paulo</td>
+            <td>10</td>
+            <td>6</td>
+            <td>3</td>
+            <td>1</td>
+            <td>20</td>
+            <td>12</td>
+            <td>8</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Atlético-MG</td>
+            <td>10</td>
+            <td>5</td>
+            <td>4</td>
+            <td>1</td>
+            <td>18</td>
+            <td>11</td>
+            <td>7</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Internacional</td>
+            <td>10</td>
+            <td>5</td>
+            <td>3</td>
+            <td>2</td>
+            <td>16</td>
+            <td>14</td>
+            <td>2</td>
+          </tr>
+          <!-- Adicione mais linhas conforme necessário -->
+        </tbody>
+      </table>
     </div>
 </body>
 
